# aginxbrowser

./: Cargo.toml  README.md
docs/: ANTI_BOT.md  agent-usage-wechat.md  introducing-aginxbrower-wechat.md  introducing-aginxbrower.md  opencarrier-web-fetch-integration.md  search-design.md
examples/: zhihu.sh
src/: config.rs  firecrawl_compat.rs  main.rs  mcp.rs  page.rs  render.rs  server.rs
src/obscura_browser/: context.rs  page.rs
src/obscura_dom/: tree.rs
src/obscura_net/: client.rs  cookies.rs  mod.rs  wreq_client.rs
src/search/: baidu.rs  bing.rs  google.rs  mod.rs  sogou.rs  sogou_wechat.rs
tests/: smoke.rs
